<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/fragment_meeting_Recycler_View"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android" />

